--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class = 'container'>
 <%= link_to 'Home', 'root_path'%>
 <%= link_to 'About', 'about_path'%>
-
+</div>
 <%= yield %>
 
 </body>
