--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Welcome to my app</h1>
-<p>Here is some random info on my app</p>
+<div class="jumbotron center">			
+
+<h1>Welcome to Accent Concierge</h1>
+<p>Click to   <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg"%></p>
+
+</div>
