--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron center">			
 
 <h1>Welcome to Accent Concierge</h1>
-<p>Click to   <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg"%></p>
+ <%= link_to "Sign In", "#", class: "btn btn-default btn-lg"%> <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg"%>
 
 </div>
